20031111:
---------
	* Version 0.1.0 with tested NetBSD support.