@@ -36,6 +36,7 @@ struct wi_stats
 {
   char  ws_netname[WI_MAXSTRLEN]; /* current SSID */
   int   ws_quality;               /* current signal quality (percent) */
+  int   ws_rate;                  /* current rate (Mbps) */
   char  ws_vendor[WI_MAXSTRLEN];  /* device vendor name */
 };
 
